# TestGrpc

./: .gitignore  README.md
DotNetCommunicationWithCppInLinux/: README.md
DotNetCommunicationWithCppInLinux/Client/: Client.sln
DotNetCommunicationWithCppInLinux/Client/src/Client/: Client.csproj  Form1.Designer.cs  Form1.cs  Program.cs
DotNetCommunicationWithCppInLinux/Client/src/Client/Bases/: AsyncCommand.cs  ViewModelBase.cs
DotNetCommunicationWithCppInLinux/Client/src/Client/BusinessLogics/: ImageClient.cs
DotNetCommunicationWithCppInLinux/Client/src/Client/Protos/: imageService.proto
DotNetCommunicationWithCppInLinux/Client/src/Client/ViewModels/: FormViewModel.cs
DotNetCommunicationWithCppInLinux/ImageService/: CMakeLists.txt
DotNetCommunicationWithCppInLinux/ImageService/Protos/: CMakeLists.txt  imageService.proto
DotNetCommunicationWithCppInLinux/ImageService/src/: GenericException.hpp  ImageGrabber.hpp  ImageService.hpp  libbmp.cpp  libbmp.h  main.cpp
DotNetCommunicationWithCppInLinux/Protos/: CMakeLists.txt
DotNetCommunicationWithCppInLinux/cppApp/: CMakeLists.txt
DotNetMisc/: DotNetMisc.sln
DotNetMisc/DotNetMisc/: ConsoleWriterWrapper.cs  DotNetMisc.csproj
TowGrpcProjectCommunication/: README.md  TowGrpcProjectCommunication.sln
TowGrpcProjectCommunication/src/CalculatorInstance/: CalculatorInstance.csproj
TowGrpcProjectCommunication/src/CalculatorInstance/Bases/: AsyncCommand.cs
TowGrpcProjectCommunication/src/CalculatorInstance/BusinessLogics/: CalculatorLogic.cs
TowGrpcProjectCommunication/src/CalculatorInstance/Views/: CalculatorView.xaml  CalculatorView.xaml.cs
TowGrpcProjectCommunication/src/ComputService/: Program.cs
TowGrpcProjectCommunication/src/ComputService/Properties/: launchSettings.json
TowGrpcProjectCommunication/src/ComputService/Protos/: greet.proto
TowGrpcProjectCommunication/src/ComputService/Services/: GreeterService.cs
TwoCppGrpcProjectCommunication/: 00.ConfigBuildEnv.sh  CMakeLists.txt  CompileProtoFile.sh  DownloadAndConfigGrpc.sh  README.md
TwoCppGrpcProjectCommunication/Client/: CMakeLIsts.txt  Calculator.hpp  ConvertGrpcStatusCodeToStr.hpp  main.cpp
TwoCppGrpcProjectCommunication/ComputeService/: CMakeLIsts.txt  ComputeService.hpp  main.cpp
TwoCppGrpcProjectCommunication/Protos/: CMakeLists.txt  compute.proto
TwoGrpcProjectCommunication/: README.md  TwoGrpcProjectCommunication.sln
TwoGrpcProjectCommunication/src/CalculatorApplication/: App.xaml  App.xaml.cs  CalculatorApplication.csproj  MainWindow.xaml  MainWindow.xaml.cs
TwoGrpcProjectCommunication/src/CalculatorInstance/: CalculatorInstance.csproj  CalculatorInstanceNavigateService.cs
TwoGrpcProjectCommunication/src/CalculatorInstance/Bases/: AsyncCommand.cs  ICalculatorBusinessLogic.cs  ICalculatorViewModel.cs  ViewModelBase.cs
TwoGrpcProjectCommunication/src/CalculatorInstance/BusinessLogics/: CalculatorEvent.cs  CalculatorFsmAction.cs  CalculatorFsmManager.cs  CalculatorLogic.cs  CalculatorState.cs
TwoGrpcProjectCommunication/src/CalculatorInstance/Protos/: compute.proto
TwoGrpcProjectCommunication/src/CalculatorInstance/ViewModels/: CalculatorViewModel.cs
TwoGrpcProjectCommunication/src/CalculatorInstance/Views/: CalculatorView.xaml  CalculatorView.xaml.cs
TwoGrpcProjectCommunication/src/ComputService/: ComputeService.csproj  Program.cs
TwoGrpcProjectCommunication/src/ComputService/Properties/: launchSettings.json
TwoGrpcProjectCommunication/src/ComputService/Protos/: compute.proto
TwoGrpcProjectCommunication/src/ComputService/Services/: ComputeService.cs  GreeterService.cs
TwoGrpcProjectCommunication/src/ComputeServiceProxy/: ComputeServiceProxy.cs  ComputeServiceProxy.csproj
(+1 files in other folders)
